--- a/index.html
+++ b/index.html
@@ -82,6 +82,14 @@
             </article>
         </a>
     </li>
+    <li class="card">
+        <a href="./Practica-7/index.html">
+            <article>
+         <h3>Practica 6</h3>
+         <p>Tarea del Arrays</p>
+            </article>
+        </a>
+    </li>
     </ul>
 </section>
 
